# pyflow-studio

./: .gitattributes  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
apps/studio/: index.html  package-lock.json  package.json
apps/studio/src/: App.tsx  api.ts  store.ts  styles.css  types.ts
apps/studio/src/components/: ConfigPanel.tsx  Palette.tsx  PyflowNode.tsx  ResultsPanel.tsx  Toolbar.tsx
docs/: 00-vision-and-scope.md  01-architecture.md  02-data-and-workflow-model.md  03-execution-engine.md  04-tool-catalog.md  05-tool-sdk.md  06-frontend-gui.md  07-backend-api.md  08-roadmap.md  09-non-functional.md  database-connections.md
examples/: customer_filter.pyflow
examples/data/: contacts.csv  customers.csv  events.csv  regions.csv
